package bolsa;

public interface Observer {
    void update(String acaoNome, double novoValor);
}