package bolsa;

public enum TipoOrdem {
    COMPRA,
    VENDA
}